# chronos

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  all.do  cflags.rc  chronos.do  clean.do  default.o.do  livesplit_core.patch  readme.md
examples/: bfbb-any.lss  config-example.toml  example_config.ini  layout.ls1l
livesplit-core/: liblivesplit_core.a.do  livesplit_core.h.do
src/: chronos.c  chronos.h  color.c  color.h  config.c  config.h  cursive-theme.toml  darksplit.c  darksplit.h  default_layout.ls1l  default_splits.lss  lib.rs  main.rs  render.c  render.h  renderer.rs  tb_extras.c  tb_extras.h  terminal.rs
src/components/: blank_space.c  components.h  current_comparison.c  current_pace.c  delta.c  detailed_timer.c  key_value.c  pb_chance.c  possible_time_save.c  previous_segment.c  separator.c  splits.c  sum_of_best.c  text.c  timer.c  title.c  total_playtime.c
