[package]
name = "chronos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25.0"
livesplit-core = { version = "0.12.0", path = "livesplit-core", features = ["auto-splitting"] }
serde = { version = "1.0.150", features = ["derive"] }
toml = "0.5.9"
