[package]
name = "chronos"
version = "0.3.0"
edition = "2021"
default-run = "chronos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
crossterm = "0.25.0"
cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend", "maplit", "term_size", "toml"] }
cursive_buffered_backend = "0.6.1"
libc = "0.2.138"
livesplit-core = { version = "0.12.0", path = "livesplit-core", features = ["auto-splitting"] }
serde = { version = "1.0.150", features = ["derive"] }
toml = "0.5.9"
